# llvm-mos-sdk

./: CMakeLists.txt  README.markdown  README.md
cmake/: llvm-mos-toolchain.cmake  llvm-mos.cmake
cmake/Compiler/: llvm-mc-ASM.cmake
cmake/llvm-mos/: AddExecutable.cmake  AddLibrary.cmake  BootstrapCompilers.cmake  Constants.cmake  LLVM-cache.cmake  LLVM.cmake  PrintAllVariables.cmake  Toolchain.cmake  ToolchainFlags.cmake  VerifyCompilers.cmake  VerifyLinkers.cmake
src/: CMakeLists.txt
src/common/lib/: basicheader.s
src/common/linker/: picolibc.ld
src/example/: CMakeLists.txt
src/example/asm/hello-world/: CMakeLists.txt  hello-world.s
src/platform/lib/: CMakeLists.txt
src/platform/lib/apple2e/: CMakeLists.txt  apple2e.s
src/platform/lib/c64/: CMakeLists.txt  c64.s
src/platform/lib/pet/: CMakeLists.txt  pet.s
src/platform/lib/vic20/: CMakeLists.txt  vic20.s
src/platform/linker/c64/: c64.ld
src/platform/linker/pet/: pet.ld
src/platform/linker/vic20/: vic20.ld
